changes learning gitpitch

--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -5,7 +5,7 @@
 # Theme Setting
 # Doc: https://gitpitch.com/docs/settings/theme
 #
-theme : template
+theme : sky
 
 #
 # Theme-Override Setting
@@ -17,7 +17,7 @@ theme-override: assets/css/PITCHME.css
 # Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : assets/img/logo.png
+logo : assets/img/eurobits.png
 logo-position : top-left
 
 #
@@ -30,7 +30,7 @@ layout : center
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "GitPitch - The Fastest Way From Idea To Presentation"
+footnote : "Criptografía para desarrolladores"
 
 #
 # Published Setting
@@ -42,6 +42,6 @@ published : true
 # Twitter Card Settings [Pro Only]
 # Doc: https://gitpitch.com/docs/settings/twitter-card
 #
-title : "GitPitch In 60 Seconds"
-description : "A short tutorial introducing the power and simplicity of GitPitch, the markdown presentation service on Git."
+title : "Criptografía para desarrolladores"
+description : "Los trucos y detalles de la criptografía moderna para desarrolladores de software."
 thumbnail : https://gitpitch.com/gpimg/tutorial-thumb.png
